<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    android:orientation="vertical"
    tools:context=".ui.GameChoiceActivity">

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:padding="10dp"
        android:text="@string/main_title"
        android:textAppearance="@style/TextAppearance.AppCompat.Display3" />

    <TextView
        android:id="@+id/subtitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_marginBottom="10dp"
        android:padding="4dp"
        tools:text="@string/specialty0"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline" />

    <Button
        android:id="@+id/button_exam"
        style="@style/MainActivity.Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/game_choice_exam" />

    <TextView
        android:id="@+id/text_info_exam"
        style="@style/TextAppearance.AppCompat.Body1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="4dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:drawableStart="@drawable/ic_info"
        android:text="@string/text_info_exam" />

    <Button
        android:id="@+id/button_subject"
        style="@style/MainActivity.Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/game_choice_subject" />

    <TextView
        style="@style/TextAppearance.AppCompat.Body1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:drawableStart="@drawable/ic_info"
        android:text="@string/text_info_subject" />

    <Button
        android:id="@+id/button_quickie"
        style="@style/MainActivity.Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/game_choice_quickie" />

    <TextView
        style="@style/TextAppearance.AppCompat.Body1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_marginTop="4dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:drawableStart="@drawable/ic_info"
        android:text="@string/text_info_quickie" />

</LinearLayout>
