<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.CTDoaFragment">

    <TextView android:id="@+id/text_question"
        style="@style/TextAppearance.CompassTraining.QuestionText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/ct_doa_question"/>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <!-- FIXME hard-coded width -->
        <ImageView
            android:layout_width="320dp"
            android:layout_height="120dp"
            android:src="@drawable/compass_frame"
            android:layout_gravity="center"
            tools:ignore="ContentDescription" />

        <it.casaricci.esamevds.ui.view.VCompassView
            android:id="@+id/canvas_compass"
            android:layout_width="320dp"
            android:layout_height="80dp"
            android:layout_gravity="center"/>

        <View
            android:layout_width="2dp"
            android:layout_height="120dp"
            android:background="@android:color/white"
            android:layout_gravity="center"/>

    </FrameLayout>

    <androidx.gridlayout.widget.GridLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:rowCount="3"
        app:columnCount="3"
        app:useDefaultMargins="true"
        android:padding="10dp">

        <Button android:id="@+id/answer_north_west"
            app:layout_column="0"
            app:layout_row="0"
            app:layout_columnWeight="1"
            app:layout_rowWeight="1"
            android:tag="315"
            android:text="@string/cardinal_short_north_west"/>

        <Button android:id="@+id/answer_north"
            app:layout_column="1"
            app:layout_row="0"
            app:layout_columnWeight="1"
            app:layout_rowWeight="1"
            android:tag="0"
            android:text="@string/cardinal_short_north"/>

        <Button android:id="@+id/answer_north_east"
            app:layout_column="2"
            app:layout_row="0"
            app:layout_columnWeight="1"
            app:layout_rowWeight="1"
            android:tag="45"
            android:text="@string/cardinal_short_north_east"/>

        <Button android:id="@+id/answer_west"
            app:layout_column="0"
            app:layout_row="1"
            app:layout_columnWeight="1"
            app:layout_rowWeight="1"
            android:tag="270"
            android:text="@string/cardinal_short_west"/>

        <Button android:id="@+id/answer_east"
            app:layout_column="2"
            app:layout_row="1"
            app:layout_columnWeight="1"
            app:layout_rowWeight="1"
            android:tag="90"
            android:text="@string/cardinal_short_east"/>

        <Button android:id="@+id/answer_south_west"
            app:layout_column="0"
            app:layout_row="2"
            app:layout_columnWeight="1"
            app:layout_rowWeight="1"
            android:tag="225"
            android:text="@string/cardinal_short_south_west"/>

        <Button android:id="@+id/answer_south"
            app:layout_column="1"
            app:layout_row="2"
            app:layout_columnWeight="1"
            app:layout_rowWeight="1"
            android:tag="180"
            android:text="@string/cardinal_short_south"/>

        <Button android:id="@+id/answer_south_east"
            app:layout_column="2"
            app:layout_row="2"
            app:layout_columnWeight="1"
            app:layout_rowWeight="1"
            android:tag="135"
            android:text="@string/cardinal_short_south_east"/>

    </androidx.gridlayout.widget.GridLayout>

</LinearLayout>
