<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    tools:context=".ui.ExamActivity">

    <TextView
        android:id="@+id/text_progress"
        style="@style/TextAppearance.AppCompat.Medium"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        tools:text="Domanda 35 di 70"/>

    <ProgressBar
        android:id="@+id/progress_exam"
        android:layout_width="match_parent"
        android:layout_height="6dp"
        android:layout_below="@+id/text_progress"
        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
        tools:progress="50"/>

    <FrameLayout
        android:id="@+id/question_fragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/progress_exam"
        android:layout_above="@+id/button_bar"
        tools:layout="@layout/fragment_question" />

    <LinearLayout
        android:id="@+id/button_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_alignParentBottom="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button_previous"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/button_previous"/>

            <Button
                android:id="@+id/button_next"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/button_next"/>

        </LinearLayout>

        <Button
            android:id="@+id/button_terminate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_terminate"/>

    </LinearLayout>

</RelativeLayout>
