<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context=".ui.ResultActivity">

    <TextView
        android:id="@+id/text_specialty"
        style="@style/TextAppearance.MaterialComponents.Headline5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        tools:text="@string/specialty0" />

    <TextView
        android:id="@+id/text_result_passed"
        style="@style/TextAppearance.MaterialComponents.Headline3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        tools:textColor="@color/textNotPassed"
        tools:text="NON IDONEO" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:baselineAligned="false">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center_horizontal">

            <TextView
                style="@style/TextAppearance.MaterialComponents.Body1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/text_answers_correct" />

            <TextView
                android:id="@+id/text_answers_correct"
                style="@style/TextAppearance.Badge.Success"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:gravity="center_horizontal"
                android:layout_margin="8dp"
                tools:text="24" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center_horizontal">

            <TextView
                style="@style/TextAppearance.MaterialComponents.Body1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/text_answers_wrong" />

            <TextView
                android:id="@+id/text_answers_wrong"
                style="@style/TextAppearance.Badge.Error"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:gravity="center_horizontal"
                android:layout_margin="8dp"
                tools:text="18" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center_horizontal">

            <TextView
                style="@style/TextAppearance.MaterialComponents.Body1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/text_answers_unanswered" />

            <TextView
                android:id="@+id/text_answers_unanswered"
                style="@style/TextAppearance.Badge.Default"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:gravity="center_horizontal"
                android:layout_margin="8dp"
                tools:text="28" />

        </LinearLayout>

    </LinearLayout>

    <TextView
        style="@style/TextAppearance.MaterialComponents.Button"
        android:gravity="center"
        android:paddingTop="12dp"
        android:paddingBottom="12dp"
        android:focusable="false"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_answers_recap"/>

    <!-- TODO serious list divider -->
    <ListView
        android:id="@+id/list_recap"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:divider="?android:attr/listDivider"
        tools:listitem="@layout/item_recap" />

</LinearLayout>
